fix search word wrap

--- a/src/heartwalk2020/sass/amazonpay.scss
+++ b/src/heartwalk2020/sass/amazonpay.scss
@@ -7,7 +7,7 @@
   img {
      max-width:100%;
   }
-  h6 {
+  .h6 {
     word-wrap: break-word;
     white-space: normal;
   }
